# fusillade

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  debug_migrations.sh  justfile  release-please-config.json  test.jsonl
crates/fusillade-arsenal/: CHANGELOG.md  Cargo.toml
crates/fusillade-arsenal/.sqlx/: query-0074398ced54115a666ab43b9105caea2fee30f507d1d35dd343d0d63e593895.json  query-0380fc8b4337f9c187cc6efe1a9a4a9d65ccb3da5927d5c679356c95023bb60f.json  query-0403e3c4478847697cb26f35feb604fa1002fe833a0e4e55ec05212a0b4ed847.json  query-054ef885e877ee5a453ec180a492aa0a4f7ef7e9dd2e40f39dd4113ef777ab65.json  query-07bc5a6fe3554633d782f182e2019dfffd2102a2db8d4539cae08e7100bb0104.json  query-07f1131537ace99d98d1d28df6027c0f1931a82f2bbf4f2319dc06a55d34133e.json  query-0821e7311b52787bfdbb98cf45eb99dcc96a9a336b751b7b18cda78f2ed844d4.json  query-0a6b251fca716d4b0b28b8d56f2056f7a10d328ebf103b104250cf907c4999f3.json  query-0aa786eca502803cfdee32530d79dc0c402a8bb70ca21aed21a591155e205a38.json  query-0ae9240407ea29416103d4e47669b91707292f85e8d0c533447ef24a508fc524.json  query-11d947d946d067da01e78c577844230f024ffe0b310801dba0d5723cba8f7e37.json  query-12b9ba14a24cb3b8b02321db21a656653bb4dd7bda82e26ee3d5905161ed652a.json  query-1305a60bf24872a002b0f0522ba90144c1de5a77069b30633083ce2e807d72a4.json  query-1574c58015ed093f76d8d17b0aa23489648de7817fb122fecb146d75b8a4827a.json  query-165d2736dbc67479406d3ee837e24c81d19d703db41683a3cfc911b768a4a7c1.json  query-1727149e75361e7e8d0c4417a78e7fd6faf4cc304e65a4d7cadaf66d57620f14.json  query-182a017791b346561c8fe39b50ae52ac3f6240e8947280a1c02a6ab967bfb484.json  query-18b8c02b0338187d3cab3dc868ae0341344c4fe7a17d0d68429a92a557301f72.json  query-198d46ee50fa76e1b766022adf4985bc3e0e82e7b8006b92e774ad7eda953c2c.json  query-1b54f6b4cde6538e8f72df8bef55f8d02c62fd3436f72db4db6f25759d266d6b.json  query-1cc9528383c724ed8492271fc3719e47e4887b1849287365be7c6f915c3c589a.json  query-1f462341d942b5604366c772ca10a8467945f94bfef73e8351209eae2aab21e8.json  query-2058f504ecd384e3b358fe88cb77bca33638eb07b9a8c767a00ef3f2ed00f4e9.json  query-209718ff67d47188c2dbbc2b5f015dfe7bbe6e6e664a204499a6207597cb6a9a.json  query-22991121bd406c469a2b8ae9bc82685db1ea5cebe3538ee715dbe4baf9c0e36f.json  query-22b45a0f54b028ef4fe58ff1a72455ced44ffaac9cd8b8523dff4231a91de823.json  query-233b8160bba2615d7c1e98fb7252708b3067ea1c9def70242bd41e0023dd3590.json  query-24d5a9cee4d593506664b90aedaec73dbdcca3a12905f113c17998b7656d5d4a.json  query-2506778ee17fe79762dbab01c92dee851634246e66806ebc9572bd400645fa85.json  query-273cfcd8a3e533e3737d0e8269023821fb17b261324003cb3a35c515354deb0f.json  query-27e3429249c6e503645d4bee3af570926e1c4dcdab45076da728e5d666e3baff.json  query-281e628fad74425234bd4e72ff45c61642455a72cf94d0e25de3ff88e4d691c0.json  query-2a1895d576d4b4968cb15a4fe123f9f2db16b739b6e32d548547aa0411492235.json  query-2b18b64a09470cee2ebb3f1c06a4095288aefe10a55d6cce07eaed4626b6c601.json  query-2cdee36e028de40f163e7ffcf7ff7cb9ef6e134584a2c781fe8e67b708129686.json  query-2ec1096e23fdaf33ee361a5d6e65647cb9a184af0bd11b199fc6386646a64e28.json  query-2ed042d751bac1a5ded640b8e6aa8c5e769cbcaecb16a7af715aae3ae2440596.json  query-3022ee42c9f1d568f0738c1b7b5399667b9375d793fb44e66e9d26697ef875c9.json  query-315019c8c6a2723c3dd466cbcd3c8935e05369dcfa836df63fe474b4813a099a.json  query-34360d949dbfc64e6ea01378975cb50de4d05eefc449f557463d7bd54da3a296.json  (+110 more)
crates/fusillade-arsenal/migrations/: 20250106000000_initial_schema.up.sql  20250107000000_add_file_metadata.down.sql  20250107000000_add_file_metadata.up.sql  20250107000001_add_custom_id.down.sql  20250107000001_add_custom_id.up.sql  20250107000002_add_unique_filename.down.sql  20250107000003_add_template_line_number.up.sql  20250107000005_add_batch_created_by.down.sql  20250107000007_add_daemons_table.down.sql  20250107000007_add_daemons_table.up.sql  20250107000008_add_batch_status_columns.up.sql  20250118000000_remove_wal_use_on_demand_counting.down.sql  20250118000000_remove_wal_use_on_demand_counting.up.sql  20250118000001_add_batch_terminal_timestamps.down.sql  20250118000001_add_batch_terminal_timestamps.up.sql  20250118000002_add_batch_terminal_timestamp_trigger.down.sql  20250118000002_add_batch_terminal_timestamp_trigger.up.sql  20250118000003_remove_filename_uniquness_constraint.down.sql  20250118000003_remove_filename_uniquness_constraint.up.sql  20250119000000_remove_request_update_notify_trigger.down.sql  20250119000000_remove_request_update_notify_trigger.up.sql  20251127000001_add_requests_state_model_index.down.sql  20251201000000_add_response_size_to_requests.up.sql  20251208000000_add_sla_claim_index.down.sql  20251209000000_add_body_byte_size_to_request_templates.up.sql  20251217000000_add_test_migration_column.down.sql  20251217000001_remove_test_migration_column.down.sql  20251217000001_remove_test_migration_column.up.sql  20251217000002_remove_batch_file_cascade.down.sql  20251217000003_remove_request_template_cascade.down.sql  20251217000003_remove_request_template_cascade.up.sql  20260116000000_remove_filename_uniqueness.down.sql  20260126000000_remove_template_file_cascade.down.sql  20260126000000_remove_template_file_cascade.up.sql  20260126000001_remove_request_batch_cascade.down.sql  20260127000000_add_pending_schedulable_index.down.sql  20260129000001_update_active_views.down.sql  20260130000000_add_routed_model.up.sql  20260204000000_add_notification_sent_at.down.sql  20260211000000_remove_is_retriable_error.up.sql  (+44 more)
crates/fusillade-arsenal/src/: db.rs  lib.rs  postgres.rs  response_step.rs  transform.rs  utils.rs
crates/fusillade-arsenal/tests/: archive_schema_parity.rs  complete_request_state_conflict.rs  db_retry.rs  realtime_failed_state.rs  response_steps.rs
crates/fusillade-core/: CHANGELOG.md  Cargo.toml
crates/fusillade-core/src/: error.rs  lib.rs  manager.rs  response_step.rs  transform.rs
crates/fusillade-core/src/batch/: mod.rs
crates/fusillade-core/src/daemon/: config.rs  mod.rs
crates/fusillade-core/src/daemon_record/: mod.rs  transitions.rs  types.rs
(+588 files in other folders)
