[package]
name = "fusillade"
edition = "2024"
version = "0.12.1"
description = "A daemon implementation for sending batched LLM requests with efficient request coalescing"
license = "MIT OR Apache-2.0"

[lib]
name = "fusillade"
path = "src/lib.rs"

[features]
default = ["postgres"]
postgres = ["sqlx"]
metrics = ["dep:metrics"]

[dependencies]
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
scopeguard = "1"
humantime = "2"
hostname = "0.4"
dashmap = { version = "6", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"], optional = true }
test-log = "0.2.18"
rand = "0.9"

# Metrics facade (optional, enabled via 'metrics' feature)
metrics = { version = "0.24", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
tracing-subscriber = "0.3"
rstest = "0.26"
clap = { version = "4", features = ["derive"] }
