[package]
name = "fusillade-arsenal"
edition = "2024"
version = "1.1.1"
description = "PostgreSQL storage implementation for the Fusillade scheduling daemon"
license = "MIT OR Apache-2.0"

[lib]
name = "fusillade_arsenal"
path = "src/lib.rs"

[dependencies]
fusillade-core = { version = "1.1.1", path = "../fusillade-core", features = ["sqlx-postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
either = "1"
futures = "0.3"
dashmap = { version = "6", features = ["serde"] }
humantime = "2"
metrics = "0.24"
rand = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-rustls"] }
sqlx-pool-router = "0.2.0"

[dev-dependencies]
test-log = "0.2.18"
axum = "0.8"
